--- a/assets/style.css
+++ b/assets/style.css
@@ -29,6 +29,6 @@ p {
   .card {
     width: 80%;
     margin: 40px auto;
-    border: 5px solid gray;
-    box-shadow: 5px 10px #888888;
+    border: 5px solid aqua;
+    box-shadow: 5px 10px rgb(0, 138, 148);
   }
